--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.6.3-node-browsers
+      - image: cimg/ruby:3.1.0
         environment:
           BUNDLER_VERSION: 2.0.1
           TZ: Asia/Tokyo
